ai 모듈 업데이트